Bundle.yaml
apiVersion: v1
kind: Service
metadata:
  name: wizarr
  namespace: wizarr
spec:
  selector:
    app: wizarr
  externalTrafficPolicy: Local
  ports:
  - port: 5690
    protocol: TCP
    targetPort: 5690
  type: LoadBalancer
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wizarr
  namespace: wizarr
  annotations:
    kubernetes.io/ingress.class: "traefik"
    traefik.ingress.kubernetes.io/backend-protocol: "HTTP"
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
spec:
  tls:
  - hosts:
    - wiz.promisedweb.com
    secretName: wiz.promisedweb.com
  rules:
  - host: wiz.promisedweb.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wizarr
            port:
              number: 5690
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: wizarr
  namespace: wizarr
spec:
  replicas: 1
  serviceName: wizarr
  selector:
    matchLabels:
      app: wizarr
  template:
    metadata:
      labels:
        app: wizarr
    spec:
      containers:
        - name: wizarr
          image: ghcr.io/wizarrrr/wizarr
          ports:
            - name: wizarr
              containerPort: 5690
              protocol: TCP
          volumeMounts:
            - name: wizarr
              mountPath: /data/database

  volumeClaimTemplates:
    - metadata:
        name: wizarr
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: "longhorn"
        resources:
          requests:
            storage: 1Gi
