Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wizarr
  namespace: wizarr
  annotations:
    kubernetes.io/ingress.class: "traefik"
    traefik.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  rules:
  - host: wiz.promisedweb.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wizarr
            port:
              number: 5690
